# faso-analytics-workflow

./: .env.example  .gitignore  Makefile  README.md
containers/: podman-compose.yaml
containers/apparmor/: README.md  faso-analytics-sandbox
containers/seccomp/: analytics-sandbox.json
docs/: PLAN-ULTRAPLAN.md
docs/adr/: ADR-001-execution-engine-datafusion.md  ADR-002-workflow-format-json-schema-draft07.md  ADR-003-frontend-stack-angular-echarts.md  ADR-004-sandbox-podman-rootless.md  ADR-005-audit-chain-blake3.md  ADR-006-semver-contrained.md
docs/asyncapi/: workflow-events.yaml
docs/diagrams/: c4-containers.mmd  c4-context.mmd  sequence-duplicate-simulate-deploy.mmd
docs/exports/: analytics-dashboard-report.typ
docs/runbook/: migration-dashboards.md  observability.md  runbook-ops.md
docs/sessions/: 2026-05-11-bootstrap-to-ga.md
docs/testing/: strategy.md
docs/training/: README.md  jour-1-fondamentaux.md  jour-2-cas-pratiques.md  plan-accompagnement-30j.md  qcm-final.md
docs/training/exercises/: tp1-reproduire-pagsi.md  tp10-troubleshooting-quiz.md  tp2-source-transformations.md  tp3-kpi-polarite.md  tp4-simulation-diff.md  tp5-schema-drift-resolution.md  tp6-deploy-shadow-rollback.md  tp7-cas-pratique-resurep.md  tp8-combo-dual-axis.md  tp9-export-pdf-excel.md
docs/user-guide/: 00-index.typ  01-prise-en-main.typ  02-creer-un-workflow.typ  03-simuler-comparer.typ  04-deployer-monitorer.typ  05-troubleshooting.typ  _style.typ
infra/grafana/dashboards/: analytics-engine-internals.json  analytics-sandbox-security.json  analytics-workflow-overview.json
infra/grafana/datasources/: datasources.yml
infra/jaeger/: jaeger-config.yaml
infra/otel/: otel-collector-config.yaml
infra/prometheus/: alerts.yml  prometheus.yml  recording_rules.yml
migrations/: README.md
migrations/production/: agrivoucher-distribution-commune-cereale-v1.0.0.json  pagsi-volumes-region-cereale-v1.0.0.json  resurep-surveillance-26-v1.0.0.json
proto/v1/: analytics_engine.proto  workflow_event.proto
schemas/: workflow-v1.json
schemas/examples/: 01-bar-vertical-pagsi-region.json  02-bar-horizontal-top10-communes.json  03-bar-grouped-region-x-cereale.json  04-donut-distribution-statuts.json  05-half-donut-resurep-especes.json  06-combo-dual-axis-sonagess.json  07-line-multi-evolution.json  08-choropleth-bf-coverage.json  README.md
services/analytics-api/: Containerfile  pom.xml
services/analytics-api/src/main/resources/: application.yml
services/analytics-api/src/main/resources/db/migration/: V1__init_workflow.sql
services/analytics-api/src/main/resources/openapi/: analytics-api.yaml
services/analytics-engine/: Cargo.toml  Containerfile  build.rs
services/analytics-engine/src/: compile.rs  error.rs  main.rs  service.rs  transforms.rs
services/analytics-frontend/: .eslintrc.json  UPGRADE-NOTES.md  angular.json  package-lock.json  package.json  tsconfig.json
services/analytics-frontend/src/: index.html  styles.css
services/analytics-frontend/src/app/: app.config.ts  app.routes.ts
services/analytics-frontend/src/app/builder/: builder-page.component.html  builder-page.component.ts  builder.scss  canvas.component.html  canvas.component.ts  dag-node.model.ts  dag-serializer.spec.ts  dag-serializer.ts  formly-field-types.ts  formly.provider.ts  palette.component.html  palette.component.ts  params-form-schema.ts  params-sidebar.component.html  params-sidebar.component.ts  toolbar.component.html  toolbar.component.ts
services/analytics-frontend/src/app/demo/: demo-page.component.html  demo-page.component.ts
services/analytics-frontend/src/app/widgets/: bf-geo.json  echarts-renderer.component.html  echarts-renderer.component.ts  pivot-table-renderer.component.ts  sample-data.service.ts  widget-host.component.ts  workflow-definition.model.ts
services/analytics-sandbox/: Cargo.toml  Containerfile
services/analytics-sandbox/src/: main.rs
services/analytics-simulator/: Cargo.toml  Containerfile
services/analytics-simulator/src/: config.rs  error.rs  lib.rs  main.rs  sampling.rs  sandbox.rs  service.rs
services/analytics-simulator/tests/: integration_sandbox_test.rs
(+58 files in other folders)
