[package]
name = "analytics-simulator"
version = "1.0.0"
edition = "2021"
rust-version = "1.83"
description = "FASO-ANALYTICS-WORKFLOW simulator — orchestrates ephemeral Podman-rootless sandboxes (ADR-004)"
license = "Apache-2.0"

[[bin]]
name = "analytics-simulator"
path = "src/main.rs"

[lib]
name = "analytics_simulator"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }

# HTTP/REST server (axum keeps proto-independent, see ADR-004 — REST is the
# Phase 2 simulator API to avoid coupling with proto changes).
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Identifiers
uuid = { version = "1", features = ["v7", "serde"] }

# Dragonfly client (Redis-protocol-compatible)
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Errors
thiserror = "2"
anyhow = "1"

# Optional gRPC bits (kept for future SimulationCompleted event emission).
prost = "0.13"
tonic = "0.12"

# nix gives access to signal sending APIs (SIGTERM) on unix.
nix = { version = "0.29", features = ["signal"] }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
